<?xml version="1.0"?>
<package format="2">
  <name>callbackqueue_clear_example</name>
  <version>0.0.0</version>
  <description>The callbackqueue_clear_example package</description>

  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>
  <author email="schaller@todo.todo">schaller</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
